--- a/jour03/job01/index.html
+++ b/jour03/job01/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -14,13 +15,15 @@
       <button id="btn-2">disparaitre</button>
     </div>
 
-    <div class="phrase" style="visibility: hidden">
+    <div class="phrase" >
       <p>
         “Les logiciels et les cathédrales, c'est un peu la même chose - d'abord
         on les construit, ensuite on prie.”
       </p>
     </div>
 
+ 
     <script src="./script.js"></script>
+
   </body>
 </html>
